# ocrapp

./: .gitignore  Dockerfile  README.md  pyproject.toml
testdrive/: image_test.py  load_loop.sh  notes.sh  test.py  test_probe.py
